--- a/public/views/bulk-update-orders.html
+++ b/public/views/bulk-update-orders.html
@@ -401,6 +401,7 @@
                             <th style="width: 50px">#</th>
                             <th>Mã đơn gốc</th>
                             <th>Tracking Number</th>
+                            <th>Waybill Number</th>
                             <th>ERP Order Code</th>
                             <th>Carrier</th>
                             <th>Trạng thái</th>
