--- a/public/views/bulk-update-orders.html
+++ b/public/views/bulk-update-orders.html
@@ -399,7 +399,7 @@
                     <thead>
                         <tr>
                             <th style="width: 50px">#</th>
-                            <th>Mã đơn gốc</th>
+                            <th>Mã đơn gốc (Excel)</th>
                             <th>Tracking Number</th>
                             <th>Waybill Number</th>
                             <th>ERP Order Code</th>
