--- a/public/views/bulk-update-orders.html
+++ b/public/views/bulk-update-orders.html
@@ -415,6 +415,6 @@
         </div>
     </div>
 
-    <script src="/js/bulk-update.js"></script>
+    <script src="/js/bulk-update.js?version=1.0.2"></script>
 </body>
 </html>
