--- a/public/views/api-docs.html
+++ b/public/views/api-docs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THG-FULFILL Open API Documentation</title>
+    <link rel="icon" type="image/png" href="/uploads/logo.png">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         :root {
@@ -705,6 +706,6 @@ function verifyWebhook(payload, signature, secret) {
     </main>
 </div>
 
-<script src="/js/api-docs.js?1912"></script>
+<script src="/js/api-docs.js?2000"></script>
 </body>
 </html>
