--- a/public/views/bulk-update-orders.html
+++ b/public/views/bulk-update-orders.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cập nhật đơn hàng hàng loạt</title>
+    <link rel="icon" type="image/png" href="/uploads/logo.png">
     <style>
         * {
             margin: 0;
@@ -415,6 +416,6 @@
         </div>
     </div>
 
-    <script src="/js/bulk-update.js?version=1.0.3"></script>
+    <script src="/js/bulk-update.js?version=2000"></script>
 </body>
 </html>
