--- a/public/views/ecount-extension.html
+++ b/public/views/ecount-extension.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ECount Extension Tool - Hướng dẫn cài đặt</title>
+    <link rel="icon" type="image/png" href="/uploads/logo.png">
     <style>
         * {
             margin: 0;
