--- a/public/views/api-admin-dashboard.html
+++ b/public/views/api-admin-dashboard.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API Customer Management - THG</title>
+    <link rel="icon" type="image/png" href="/uploads/logo.png">
     <style>
         * {
             margin: 0;
@@ -315,6 +316,6 @@
             </table>
         </div>
     </div>
-    <script src="/js/api-admin-dashboard.js?123" defer></script>
+    <script src="/js/api-admin-dashboard.js?2000" defer></script>
 </body>
 </html>
