--- a/public/views/down-label-ecount-extension.html
+++ b/public/views/down-label-ecount-extension.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Down Label ECount Extension Tool - Hướng dẫn cài đặt</title>
+    <link rel="icon" type="image/png" href="/uploads/logo.png">
     <style>
         * {
             margin: 0;
