--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -921,6 +921,17 @@
         </div>
     </div>
 
-    <script src="/js/dashboard.js?2000"></script>
+    <!-- Test Event Picker Modal -->
+    <div class="modal-overlay" id="testEventPickerModal" data-wh-id="">
+        <div class="modal" style="max-width:420px;">
+            <h3>Test Webhook</h3>
+            <div id="testEventPickerContent"></div>
+            <div class="modal-actions" style="margin-top:16px;">
+                <button type="button" class="btn btn-sm" id="btnCancelTestPicker">Cancel</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="/js/dashboard.js?2005"></script>
 </body>
 </html>
